Fix issue on report page that the cards didn't stretch over the full page width in some cases

--- a/frontend/src/app/budget-plan/budget-plan-report/budget-plan-report.component.scss
+++ b/frontend/src/app/budget-plan/budget-plan-report/budget-plan-report.component.scss
@@ -11,6 +11,8 @@ td.actions {
 }
 
 div.content {
+  width: 100%;
+
   div {
     padding: 10px;
   }
